[package]
name = "deet"
version = "0.1.0"
authors = ["Ryan Eberhardt <reberhardt7@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nix = "0.24.1"
libc = "0.2.119"
rustyline = "9.1.2"
gimli = "0.26.1"
object = { version = "0.27.1", features=["wasm"]}
memmap = "0.7"
addr2line = "0.17.0"